# QuestMate

./: .env.example  .gitignore  README.md  REPOSITORY_BOUNDARY.md  agent.py  config.py  docker-compose.yml  game_resolution.py  guide_prompts.py  knowledge.py  llm.py  main.py  mediawiki_client.py  model_providers.py  multi_agent.py  outbound_http.py  pyproject.toml  quality_policy.py  query_tokens.py  request_safety.py  schemas.py  search.py  search_cache.py  source_registry.py  storage.py  tasks.py  test_main.py
.tests/: test_citation_claims.py  test_evals.py  test_evidence_generalization.py  test_game_confirmation.py  test_generalization_properties.py  test_identity_resolution.py  test_investigation.py  test_llm.py  test_main.py  test_model_providers.py  test_multi_agent.py  test_multilingual_generalization.py  test_outbound_http.py  test_query_generalization.py  test_retrieval_pipeline.py  test_retrieval_policies.py  test_runtime.py  test_runtime_lifecycles.py  test_search_router.py  test_source_generalization.py  test_stream_rendering.py  test_task_workflows.py  test_version_generalization.py
agents/: __init__.py  answer.py  compat.py  contracts.py  evidence.py  identity.py  identity_resolution.py  planning.py  retrieval.py
ai/: __init__.py  citation_claims.py  citation_rendering.py  evidence_policy.py  fallback_planning.py  investigation.py  investigation_context.py  prompt_context.py  search_plan_json.py  search_plan_parsing.py  (+1 more)
evals/: README.md  (+11 more)
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/icons/: icon.icns
overlay/src-tauri/src/: lib.rs  main.rs
(+89 files in other folders)
