[project]
name = "questmate"
version = "0.1.0"
description = "A FastAPI backend skeleton for a game guide agent powered by Claude, LangGraph, and live web search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "anthropic>=0.64.0",
    "asyncpg>=0.29.0",
    "celery>=5.4.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "pgvector>=0.3.2",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.8",
    "sqlalchemy[asyncio]>=2.0.32",
    "structlog>=24.4.0",
    "tavily-python>=0.5.0",
    "trafilatura>=1.12.0",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = [".tests"]
python_files = ["test_*.py"]
