[package]
name = "questmate-overlay"
version = "0.1.0"
description = "QuestMate desktop overlay"
authors = ["QuestMate"]
edition = "2021"

[lib]
name = "questmate_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
